[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/screen/GUIBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/screen/MainMenu.gd" type="Script" id=2]

[node name="MainMenu" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="MarginContainer" parent="." index="0"]
custom_constants/margin_top = 10

[node name="VBoxContainer" parent="MarginContainer" index="0"]
margin_top = 10.0

[node name="BackButton" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxcontainer" index="1"]
visible = false

[node name="TittleLabel" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxcontainer" index="2"]
margin_left = 23.0
margin_right = 377.0
text = "Menu"

[node name="CloseButton" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxcontainer" index="3"]
margin_left = 381.0
margin_right = 400.0

[node name="VSeparator2" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxcontainer" index="4"]
visible = false

[node name="ScrollContainer" parent="MarginContainer/VBoxContainer" index="1"]
margin_bottom = 250.0

[node name="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer" index="0"]
margin_left = 2.0
margin_right = 408.0
margin_bottom = 199.0
size_flags_horizontal = 3

[node name="CharactersButton" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" index="0"]
margin_right = 406.0
margin_bottom = 36.0
action_mode = 0
text = "Characters"
flat = true

[node name="ClothesButton" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" index="1"]
margin_top = 40.0
margin_right = 406.0
margin_bottom = 76.0
action_mode = 0
text = "Clothes"
flat = true

[node name="MiscButton" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" index="2"]
margin_top = 80.0
margin_right = 406.0
margin_bottom = 116.0
action_mode = 0
text = "Misc"
flat = true

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" index="3"]
margin_top = 120.0
margin_right = 406.0
margin_bottom = 156.0
action_mode = 0
text = "Credits"
flat = true
